--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "dependencies": {
     "body-parser": "1.18.3",
-    "express": "4.16.3",
+    "express": "^4.17.1",
     "express-session": "1.15.6",
     "express-validator": "5.3.1",
     "marko": "4.13.4-1",
