--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "nodemon index.js",
+    "test": "nodemon server.js",
     "start": "node server.js"
   },
   "repository": {
